# ngmail

./: .gitmodules  CMakeLists.txt
cmake/: Findlibuv.cmake
src/: CMakeLists.txt  main.c  server.c  server.h  smtp.c  smtp.h
src/http/: CMakeLists.txt  http.c  http.h
src/platform/: CMakeLists.txt  load_module.h  thread.h  unistd.h
src/platform/unix/: load_module.c  thread.c
src/platform/win/: thread.c
src/smtp/: CMakeLists.txt  command_handler.c  command_handler.h  data_handler.c  data_handler.h  helo_handler.c  mail_from_handler.h  rcpt_to_handler.h  smtp.c  smtp.h
src/util/: CMakeLists.txt  shared_ptr.c  shared_ptr.h  string.c  string.h
